Adicionando JWT
